--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".ui.main.MainActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/animationView"
@@ -75,7 +75,7 @@
 
     <Button
         android:textAllCaps="false"
-        android:text="@string/login"
+        android:text="@string/sign_up"
         android:id="@+id/Login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
