--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
-        app:lottie_loop="true"
+        app:lottie_loop="false"
         app:lottie_rawRes="@raw/car_animation" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -74,11 +74,11 @@
 
 
     <Button
-        android:textAllCaps="false"
-        android:text="@string/sign_up"
         android:id="@+id/Login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:text="@string/sign_up"
+        android:textAllCaps="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -95,7 +95,6 @@
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
