--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#0037FF</color>
+    <color name="green">#AACE30</color>
+<!--    <color name="blue">#142D3E</color>-->
+    <color name="blue_dark">#001425</color>
 </resources>
